add filter to partners, refactor navbar position to sticky

--- a/src/index.html
+++ b/src/index.html
@@ -57,11 +57,11 @@
             <div class="partners">
                 <div class="container container_small">
                     <div class="partners__row">
-                        <div class="partners__item"><img src="assets/img/partners-logo/binator.svg" alt="binator logo"></div>
-                        <div class="partners__item"><img src="assets/img/partners-logo/buyme.svg" alt="buyme logo"></div>
-                        <div class="partners__item"><img src="assets/img/partners-logo/loogipsum.svg" alt="loogipsum logo"></div>
-                        <div class="partners__item"><img src="assets/img/partners-logo/umbrella.svg" alt="umbrella logo"></div>
-                        <div class="partners__item"><img src="assets/img/partners-logo/square.svg" alt="square logo"></div>
+                        <a href="#" class="partners__item"><img src="assets/img/partners-logo/binator.svg" alt="binator logo"></a>
+                        <a href="#" class="partners__item"><img src="assets/img/partners-logo/buyme.svg" alt="buyme logo"></a>
+                        <a href="#" class="partners__item"><img src="assets/img/partners-logo/loogipsum.svg" alt="loogipsum logo"></a>
+                        <a href="#" class="partners__item"><img src="assets/img/partners-logo/umbrella.svg" alt="umbrella logo"></a>
+                        <a href="#" class="partners__item"><img src="assets/img/partners-logo/square.svg" alt="square logo"></a>
                     </div>
                 </div>
             </div>
@@ -169,7 +169,7 @@
                             <div class="fus-article-snippet__image">
                                 <img src="assets/img/blog/introducing.png" alt="Introducing Fusely Engage">
                             </div>
-                            <div class="blog__row-content-bodyfus-article-snippet__body">
+                            <div class="blog__row-content-body fus-article-snippet__body">
                                 <div class="fus-article-snippet__title">Introducing Fusely Engage</div>
                                 <div class="fus-article-snippet__text">We’re happy to announce the Fusely Engage. The first growth automation platform designed for the digital interactions.</div>
                                 <a href="#" class="fus-article-snippet__button-underline fus-button-underline">Read more</a>
@@ -179,7 +179,7 @@
                             <div class="fus-article-snippet__image">
                                 <img src="assets/img/blog/plans.png" alt="Premium vs Enterprise plan">
                             </div>
-                            <div class="blog__row-content-bodyfus-article-snippet__body">
+                            <div class="blog__row-content-body fus-article-snippet__body">
                                 <div class="fus-article-snippet__title">Premium vs Enterprise plan</div>
                                 <div class="fus-article-snippet__text">Let’s compare our most popular plans: Premium and Enterprise. This article will help you decide which one will be better for your needs.</div>
                                 <a href="#" class="fus-article-snippet__button-underline fus-button-underline">Read more</a>
