--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
                     <div class="navbar__logo">
                         <a href="/"><img src="assets/img/logo.svg" alt="fusely logo"></a>
                     </div>
-                    <div tabindex="0" class="navbar__burger">
+                    <div tabindex="-1" class="navbar__burger">
                         <span></span>
                     </div>
                     <nav class="navbar__nav nav">
@@ -28,6 +28,7 @@
                             <a href="#pricing" class="nav__item">Pricing</a>
                             <a href="#blog" class="nav__item">Blog</a>
                             <a href="#contact" class="nav__item">Contact</a>
+                            <a href="components.html" class="nav__item">Components</a>
                         </div>
                     </nav>
                     <div class="navbar__login">
@@ -246,7 +247,7 @@
             <div class="container container_large">
                 <div class="footer__bottom-info-row">
                     <div class="footer__bottom-info-logo">
-                        <a href="/"><img src="assets/img/logo.svg" alt=""></a>
+                        <a href="/"></a>
                     </div>
                     <div class="footer__bottom-info-copyright">© Fusely 2022. All rights reserved.</div>
                 </div>
