--- a/src/index.html
+++ b/src/index.html
@@ -59,9 +59,13 @@
                 <div class="container container_small">
                     <div class="partners__row">
                         <a href="#" class="partners__item"><img src="assets/img/partners-logo/binator.svg" alt="binator logo"></a>
+                        <div class="partners__item-divider"></div>
                         <a href="#" class="partners__item"><img src="assets/img/partners-logo/buyme.svg" alt="buyme logo"></a>
+                        <div class="partners__item-divider"></div>
                         <a href="#" class="partners__item"><img src="assets/img/partners-logo/loogipsum.svg" alt="loogipsum logo"></a>
+                        <div class="partners__item-divider_mobile-break"></div>
                         <a href="#" class="partners__item"><img src="assets/img/partners-logo/umbrella.svg" alt="umbrella logo"></a>
+                        <div class="partners__item-divider"></div>
                         <a href="#" class="partners__item"><img src="assets/img/partners-logo/square.svg" alt="square logo"></a>
                     </div>
                 </div>
@@ -72,7 +76,7 @@
                         <div class="section__body">
                             <div class="section__title title">Detailed Examination</div>
                             <div class="section__text">A daily dataset to keep you up to date on subscription market trends and what's happening in your vertical.</div>
-                            <a href="#" class="section__button fus-button-underline">Learn more</a>
+                            <a href="#" class="section__button fus-underline-button">Learn more</a>
                         </div>
                         <div class="section__image">
                             <img src="assets/img/detailed-examination.png" alt="Detailed examination">
@@ -86,7 +90,7 @@
                         <div class="section__body">
                             <div class="section__title title">Creative Solutions</div>
                             <div class="section__text">Creativity is our second name. We're full of inventive ideas and we're happy to present them to you.</div>
-                            <a href="#" class="section__button fus-button-underline">Learn more</a>
+                            <a href="#" class="section__button fus-underline-button">Learn more</a>
                         </div>
                         <div class="section__image">
                             <img src="assets/img/creative-solutions.png" alt="Creative solutions">
@@ -100,7 +104,7 @@
                         <div class="section__body">
                             <div class="section__title title">Professional Team</div>
                             <div class="section__text">Well, obviously, we're professionals. Don't hesitate - get to know us better.</div>
-                            <a href="#" class="section__button fus-button-underline">Learn more</a>
+                            <a href="#" class="section__button fus-underline-button">Learn more</a>
                         </div>
                         <div class="section__image">
                             <img src="assets/img/professional-team.png" alt="Professional Team">
@@ -163,7 +167,7 @@
                             <div class="blog__row-content-body fus-article-snippet__body">
                                 <div class="fus-article-snippet__title">What’s Fusely?</div>
                                 <div class="fus-article-snippet__text">A brand new company, created for everyone. This article will help you understand what "fusely" stands for.</div>
-                                <a href="#" class="fus-article-snippet__button-underline fus-button-underline">Read more</a>
+                                <a href="#" class="fus-article-snippet__underline-button fus-underline-button">Read more</a>
                             </div>
                         </div>
                         <div class="blog__article-snippet content__flex-column fus-article-snippet">
@@ -173,7 +177,7 @@
                             <div class="blog__row-content-body fus-article-snippet__body">
                                 <div class="fus-article-snippet__title">Introducing Fusely Engage</div>
                                 <div class="fus-article-snippet__text">We’re happy to announce the Fusely Engage. The first growth automation platform designed for the digital interactions.</div>
-                                <a href="#" class="fus-article-snippet__button-underline fus-button-underline">Read more</a>
+                                <a href="#" class="fus-article-snippet__underline-button fus-underline-button">Read more</a>
                             </div>
                         </div>
                         <div class="blog__article-snippet content__flex-column fus-article-snippet">
@@ -183,7 +187,7 @@
                             <div class="blog__row-content-body fus-article-snippet__body">
                                 <div class="fus-article-snippet__title">Premium vs Enterprise plan</div>
                                 <div class="fus-article-snippet__text">Let’s compare our most popular plans: Premium and Enterprise. This article will help you decide which one will be better for your needs.</div>
-                                <a href="#" class="fus-article-snippet__button-underline fus-button-underline">Read more</a>
+                                <a href="#" class="fus-article-snippet__underline-button fus-underline-button">Read more</a>
                             </div>
                         </div>
                     </div>
